--- a/pep582/tox.ini
+++ b/pep582/tox.ini
@@ -1,30 +1,16 @@
 [tox]
-envlist = py27, py34, py35, py36, py37, lint, format
+envlist = py36, py37, py38
 
 [travis]
 python =
     3.8: py38
     3.7: py37
-    3.7: py37
     3.6: py36
 
-[testenv:lint]
-basepython = python
-commands = invoke lint
-
-[testenv:format]
-basepython = python
-commands = invoke format --check
-
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
-deps =
-    pipenv
-    {py27}: pathlib2
-; If you want to make tox run the tests with the same versions, commit
-; the Pipfile.lock to source control and remove the --skip-lock below
-commands_pre = pipenv install --dev --skip-lock
-commands = invoke test
-
+# install pytest in the virtualenv where commands will be executed
+deps = pytest
+commands =
+    # NOTE: you can run any command line tool here - not just tests
+    pytest
 
